# CLIF-Lighthouse-Deprecated

./: README.md  main.py  pyproject.toml  test_clifpy_integration.py
app/: app.py  common_qc.py
