[project]
name = "clif-lighthouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "appdirs==1.4.4",
    "arrow==1.3.0",
    "astor==0.8.1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.12.3",
    "blinker==1.8.2",
    "cachetools==5.5.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "clifpy>=0.0.3",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "dateutils==0.6.12",
    "decorator==5.1.1",
    "duckdb==1.0.0",
    "entrypoints==0.4",
    "exceptiongroup==1.2.2",
    "executing==2.0.1",
    "faker==28.0.0",
    "favicon==0.7.0",
    "fonttools==4.53.1",
    "fuzzywuzzy==0.18.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "gw-dsl-parser==0.1.49.1",
    "htbuilder==0.6.2",
    "idna==3.8",
    "importlib-metadata==8.4.0",
    "importlib-resources==6.4.4",
    "ipylab==1.0.0",
    "ipython==8.18.1",
    "ipywidgets==8.1.5",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2023.12.1",
    "jupyterlab-widgets==3.0.13",
    "kanaries-track==0.0.5",
    "kiwisolver==1.4.5",
    "lxml==5.3.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdownlit==0.0.7",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "monotonic==1.6",
    "more-itertools==10.4.0",
    "narwhals==1.5.5",
    "numpy==1.26.4",
    "packaging==24.1",
    "pandas==2.2.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.4.0",
    "plotly==5.24.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.47",
    "protobuf==5.28.0",
    "psutil==6.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pygwalker==0.4.9.8",
    "pymdown-extensions==10.9",
    "pyparsing==3.1.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.2",
    "quickjs==1.19.4",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.8.0",
    "rpds-py==0.20.0",
    "seaborn==0.13.2",
    "segment-analytics-python==2.2.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.32",
    "sqlglot==25.18.0",
    "st-annotated-text==4.0.1",
    "st-theme==1.2.3",
    "stack-data==0.6.3",
    "streamlit==1.38.0",
    "streamlit-camera-input-live==0.2.0",
    "streamlit-card==1.0.2",
    "streamlit-embedcode==0.1.2",
    "streamlit-extras==0.4.7",
    "streamlit-faker==0.0.3",
    "streamlit-image-coordinates==0.1.9",
    "streamlit-keyup==0.2.4",
    "streamlit-navigation-bar==3.3.0",
    "streamlit-toggle-switch==1.0.2",
    "streamlit-vertical-slider==2.5.5",
    "tenacity==8.5.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20240821",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "validators==0.33.0",
    "wasmtime==24.0.0",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.13",
    "zipp==3.20.1",
]
